fixed overflow of display tile

--- a/src/containers/grid/tiles/mqtt/display/style.css
+++ b/src/containers/grid/tiles/mqtt/display/style.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     text-shadow: 0px 1px 4px black;
+    overflow: hidden;
 
 }
 
